--- a/community-gardening-tools.html
+++ b/community-gardening-tools.html
@@ -25,45 +25,148 @@
   </div>
   <div class="wrapper">
     <div class="initiatives">
-      <h1>COMMUNITY GARDENING TOOLS</h1>
+      <h1>COMMUNITY <br>GARDENING TOOLS</h1>
+      <br>
       <sub>GRANTS, MENTORSHIPS AND OTHER GARDENS OF KNOWLEDGE</sub>
       </div>
-
-<div class="description">Flowers cannot possibly grow alone. There are many tools around to help
+<div class="description"><p>Flowers cannot possibly grow alone. There are many tools around to help
     facilitate your growth. Dive into the tool shed and see what you can find.
-</div>
+  </p></div>
 
 <div class="accordion-box">
-<button class="accordion"><p>GRANTS</p></button>
+<button class="accordion"><p>GRANTS</p>
+</button>
 <div class="panel">
   <div class="panel-text">
-  <h2>Arts Projects for Individuals and Groups - Australia Council for the Arts</h2>
+  <h2>Arts Projects for Individuals and Groups: Australia Council for the Arts</h2>
   <p>
     Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
   </p>
   <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+</div>
 
-    https://www.nevernotcreative.org/herenow
-    https://nationaltheatreofparramatta.com.au/engage/creativefuturesprogram/
-    
-    https://www.nsw.gov.au/grants-and-funding/creative-koori-projects-individuals-and-organisations-2023/24</p>
-  </div>
+<div class="line-4"></div>
+<div class="panel-text">
+  <h2>Creative Futures Program</h2>
+  <p>
+    Riverside’s National Theatre of Parramatta's Creative Futures Program provides nominated Western Sydney creatives with job learning and networking opportunities, enabling each participant to advance their careers within their nominated field. This program is by invitation only. 
+  </p>
+  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
   </div>
 
+    <div class="line-4"></div>
+    <div class="panel-text">
+      <h2>Creative Koori Projects</h2>
+      <p>
+        Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
+      </p>
+      <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+      </div>
+  </div>
+
+  
 <button class="accordion"><p>MENTORSHIP</p></button>
 <div class="panel">
-  <p>Lorem ipsum...</p>
+  <div class="panel-text">
+  <h2>Here Now</h2>
+  <p>
+    Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
+  </p>
+  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+</div>
 </div>
 
-<button class="accordion"><p>SUPPORT</p></button>
+  <button class="accordion"><p>SUPPORT</p></button>
 <div class="panel">
-  <p>Lorem ipsum...</p>
+  <div class="panel-text">
+  <h2>artspay</h2>
+  <p>
+    Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
+  </p>
+  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
 </div>
+  </div>
 
 <button class="accordion"><p>OTHER GARDENS OF KNOWLEDGE</p></button>
 <div class="panel">
-  <p>Lorem ipsum...</p>
-</div>
+  <div class="panel-text">
+    <h2>futuress.org</h2>
+    <p>
+     A publishing platform where design, feminism and politics meet.
+    </p>
+    <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+    </div>
+
+    <div class="line-4"></div>
+    <div class="panel-text">
+      <h2>Cyberfeminism Index</h2>
+      <p>
+        Edited by designer, professor and researcher Mindy Seu, it includes more than 1000 short entries of radical techno-critical activism in a variety of media, including excerpts from academic articles and scholarly texts; descriptions of hackerspaces, digital rights activist groups, bio-hacktivism; and depictions of feminist net art.      </p>
+      <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+      </div>
+
+  <div class="line-4"></div>
+  <div class="panel-text">
+    <h2>AIGA Eye On Design</h2>
+    <p>
+      An editorial platform that covers issues important to the global design world to build a more engaged design community.
+    </p>
+    <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+    </div>
+
+<div class="line-4"></div>
+<div class="panel-text">
+  <h2>Virtual Care Lab</h2>
+  <p>
+    Through remotely-conducted creative experiments, virtual care lab aims to create welcoming, innovative opportunities for joy, empathy, creativity and invention that support mutual aid actions and other forms of community care
+  </p>
+  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+  </div>
+
+<div class="line-4"></div>
+<div class="panel-text">
+  <h2>We Make Money Not Art</h2>
+  <p>
+    Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
+  </p>
+  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+  </div>
+
+  <div class="line-4"></div>
+<div class="panel-text">
+  <h2>Real Life Mag</h2>
+  <p>
+    Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
+  </p>
+  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+  </div>
+
+  <div class="line-4"></div>
+  <div class="panel-text">
+    <h2>Runway Journal</h2>
+    <p>
+      Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
+    </p>
+    <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+    </div>
+
+    <div class="line-4"></div>
+  <div class="panel-text">
+    <h2>Deem Journal</h2>
+    <p>
+      Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
+    </p>
+    <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+    </div>
+    <div class="line-4"></div>
+
+    <div class="panel-text">
+      <h2>The Creative Independent</h2>
+      <p>
+        Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
+      </p>
+      <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+      </div>
 
 </div>
 
