--- a/community-gardening-tools.html
+++ b/community-gardening-tools.html
@@ -58,9 +58,8 @@
     <div class="panel-text">
       <h2>Creative Koori Projects</h2>
       <p>
-        Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
-      </p>
-      <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+        Funding for NSW-based Aboriginal artists, groups, arts/cultural workers and organisations in delivering arts and culture activities that benefit Aboriginal artists, arts/cultural workers and Aboriginal communities.      </p>
+      <div class="learnmore"><a href="https://www.nsw.gov.au/grants-and-funding/creative-koori-projects-individuals-and-organisations-2023/24">  &rarr; LEARN MORE</a></div>
       </div>
   </div>
 
@@ -68,22 +67,21 @@
 <button class="accordion"><p>MENTORSHIP</p></button>
 <div class="panel">
   <div class="panel-text">
-  <h2>Here Now</h2>
+  <h2>Never Not Creative: Here Now</h2>
   <p>
-    Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
-  </p>
-  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+    A mentorship program for BIPOC creatives at the start of their careers.  </p>
+  <div class="learnmore"><a href="https://www.nevernotcreative.org/herenow">  &rarr; LEARN MORE</a></div>
 </div>
 </div>
 
   <button class="accordion"><p>SUPPORT</p></button>
 <div class="panel">
   <div class="panel-text">
-  <h2>artspay</h2>
+  <h2>ArtsPay</h2>
   <p>
-    Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
-  </p>
-  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+    The ArtsPay Foundation is an independent, artist-led charitable foundation with a mission to support independent artists and small arts organisations across Australia.  
+    Every time a customer makes a purchase at a business using ArtsPay - either in-store or online - ArtsPay uses the payment fees to support the arts. </p>
+  <div class="learnmore"><a href="https://artspay.com/">  &rarr; LEARN MORE</a></div>
 </div>
   </div>
 
@@ -94,7 +92,7 @@
     <p>
      A publishing platform where design, feminism and politics meet.
     </p>
-    <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+    <div class="learnmore"><a href="http://futuress.org/">  &rarr; LEARN MORE</a></div>
     </div>
 
     <div class="line-4"></div>
@@ -102,7 +100,7 @@
       <h2>Cyberfeminism Index</h2>
       <p>
         Edited by designer, professor and researcher Mindy Seu, it includes more than 1000 short entries of radical techno-critical activism in a variety of media, including excerpts from academic articles and scholarly texts; descriptions of hackerspaces, digital rights activist groups, bio-hacktivism; and depictions of feminist net art.      </p>
-      <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+      <div class="learnmore"><a href="https://cyberfeminismindex.com/">  &rarr; LEARN MORE</a></div>
       </div>
 
   <div class="line-4"></div>
@@ -111,7 +109,7 @@
     <p>
       An editorial platform that covers issues important to the global design world to build a more engaged design community.
     </p>
-    <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+    <div class="learnmore"><a href="https://eyeondesign.aiga.org/">  &rarr; LEARN MORE</a></div>
     </div>
 
 <div class="line-4"></div>
@@ -120,52 +118,49 @@
   <p>
     Through remotely-conducted creative experiments, virtual care lab aims to create welcoming, innovative opportunities for joy, empathy, creativity and invention that support mutual aid actions and other forms of community care
   </p>
-  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+  <div class="learnmore"><a href="https://virtualcarelab.com/">  &rarr; LEARN MORE</a></div>
   </div>
 
 <div class="line-4"></div>
 <div class="panel-text">
   <h2>We Make Money Not Art</h2>
   <p>
-    Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
+    A blog by Belgian curator, blogger and art critic Régine Debatty with writings on the ways artists, hackers and designers use science and technology as a medium for critical discussion.
   </p>
-  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+  <div class="learnmore"><a href="https://we-make-money-not-art.com/">  &rarr; LEARN MORE</a></div>
   </div>
 
   <div class="line-4"></div>
 <div class="panel-text">
-  <h2>Real Life Mag</h2>
+  <h2>Real Life</h2>
   <p>
-    Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
-  </p>
-  <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+    An online magazine with a particular focus on the personal and cultural implications of living with technology.  </p>
+  <div class="learnmore"><a href="https://reallifemag.com/topics">  &rarr; LEARN MORE</a></div>
   </div>
 
   <div class="line-4"></div>
   <div class="panel-text">
     <h2>Runway Journal</h2>
     <p>
-      Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
+      Runway Journal is an open-access digital publishing platform that commissions, cultivates and preserves experimental and critical writing practices. As one of Australia’s longest-running artist-run initiatives, Runway is committed to advancing the field of experimental digital art and fostering the practices of emerging and underrepresented voices.
     </p>
-    <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+    <div class="learnmore"><a href="https://runway.org.au/">  &rarr; LEARN MORE</a></div>
     </div>
 
     <div class="line-4"></div>
   <div class="panel-text">
     <h2>Deem Journal</h2>
     <p>
-      Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
-    </p>
-    <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+      Deem is a global platform focused on design as social practice, uncovering meaningful narratives, connections, and patterns that might help us better understand our histories and imagine our futures.    </p>
+    <div class="learnmore"><a href="https://www.deemjournal.com/">  &rarr; LEARN MORE</a></div>
     </div>
     <div class="line-4"></div>
 
     <div class="panel-text">
       <h2>The Creative Independent</h2>
       <p>
-        Grants are available from $10,000 to $50,000 for a range of activities and projects, both national and international, across all art forms.
-      </p>
-      <div class="learnmore"><a href="https://creative.gov.au/investment-and-development/arts-projects-for-individuals-and-groups/">  &rarr; LEARN MORE</a></div>
+        The Creative Independent is a growing resource of emotional and practical guidance for creative people. They produce interviews, wisdom, and guides that illuminate the trials and tribulations of living a creative life, as told by working artists.      </p>
+      <div class="learnmore"><a href="https://thecreativeindependent.com/">  &rarr; LEARN MORE</a></div>
       </div>
 
 </div>
