--- a/about.html
+++ b/about.html
@@ -67,7 +67,8 @@ body{
 
 
 <div class="description-about">
-  <b>TEND.TO is a digital website project designed and coded by Julien Ortiz as part of the 2023 Design Honours course at the University of Technology, Sydney. This project aims to use the online practice of digital gardening in order to offer a growing space to learn about community creative practice in Western Sydney and the Blue Mountains.</b>
+  <b>TEND.TO is a digital website project designed and coded by Julien Ortiz as part of the 2023 Design Honours course at the University of Technology, Sydney. This project aims to use the online practice of digital gardening in order to offer a growing space to learn about community creative practice in Western Sydney and the Blue Mountains 
+    and plant seeds of inspiration to support the creation of diverse and collective futures.</b>
   <br><br>
   I acknowledge the Dharug and Gadigal people of the Eora nation, whose lands I live and work on. I pay my respects to Elders past and present, recognising them as the traditional custodians of land, sea and sky, and that their sovereignty was never ceded. This was and always will be, Aboriginal land.
 
