--- a/community-gardening-tools.html
+++ b/community-gardening-tools.html
@@ -174,7 +174,7 @@
 
 
     </div>
-
+  </div>
 
 
     <a href="index.html"><div class="nav-landing" style="background-color: #FFEAF9;"><h1>RE-TEND TO YOUR GARDEN</h1></div></a>
