--- a/exploring-our-local-blooms.html
+++ b/exploring-our-local-blooms.html
@@ -40,7 +40,7 @@
   Please stay tuned for these writings — they will grow at a later time.
 </p>
 </div>
-<div class="experience-2"><p>&rarr; Pari Undercurrent Exhibition</p></div>
+<div class="experience-2"><p>&rarr; Reflections on Artist-Run Initiatives</p></div>
 <br><br>
 <div class="experience-2"><p>&rarr; The Independent Press: Semi Permanent and the Other Worlds Zine Fair</p></div>
 <br><br>
