--- a/tash-keuneman.html
+++ b/tash-keuneman.html
@@ -32,6 +32,10 @@
     font-size: 25px;
   }
 }
+
+html{
+  overflow-x: hidden;
+}
   </style>
   
   
@@ -64,6 +68,10 @@
 
 <div class="author">
   Julien Ortiz in conversation with Tash Keuneman
+</div>
+
+<div class="img">
+  <img id="tash-image" src="img/EX-1.png"></img>
 </div>
 
   <div class="bio-1"><i>Tash Keuneman</i> is a designer of software passionate about improving human and planetary welfare.
@@ -248,6 +256,8 @@
    </p>
    </div>
 
+   <div class="footer-line"></div>
+
    <div class="contact">
 <sub>To explore more of Tash’s works’, please visit 
   <a href="https://tashkeuneman.com/"><u>https://tashkeuneman.com</u></a>.</sub>
@@ -255,10 +265,11 @@
 
 <div id="ecosystems">
   <h1>RELATED ECOSYSTEMS</h1>
-  <div id="blob-container-blue"></div>
-  <div class="section-1">
+  <div class="section-2">
     <sub>
-     <a href="zine-workshop.html">&rarr; Zines as a form of Activism and Rebellion</a> 
+      <a href="planting-seeds-across-the-west.html">
+        &rarr; Zines as a form of activism and rebellion
+      </a>
     </sub>
   </div>
   </div>
