--- a/tian-zhang.html
+++ b/tian-zhang.html
@@ -7,7 +7,6 @@
 
   <link rel="stylesheet" media="screen and (min-width: 1024px)" href="desktop_styles.css">
   <link rel="stylesheet" media="screen and (max-width: 1023px)" href="mobile_styles.css">  <title>TEND.TO - Planting Seeds in the West</title>
-  <script media="screen and (min-width: 941px)" defer src="blue-blob.js"></script>
   <style>
 
 
@@ -27,6 +26,10 @@
     display: none;
   }
 
+}
+
+.wrapper{
+  padding-bottom: 8rem;
 }
   </style>
   
@@ -188,26 +191,22 @@ Image and design by <a href="https://www.instagram.com/huy.nguyen.xyz/"><u>Huy N
 
   <div id="ecosystems">
 <h1>RELATED ECOSYSTEMS</h1>
-<div id="blob-container-blue"></div>
-<div class="section-1">
-  <sub>
-   <a href>&rarr; Reflections on Artist Run Initiatives</a> 
-  </sub>
-</div>
 <div class="section-2">
   <sub>
-    <a href="initiatives.html">&rarr; Planting Seeds in the West</a> 
+    <a href="planting-seeds-across-the-west.html">
+      &rarr; Planting Seeds in the West
+    </a>
   </sub>
 </div>
+<br>
 <div class="section-3">
   <sub>
-    &rarr; Water Your Knowledge > A manifesto for radical care or how to be a human in the arts  </sub>
+    <a href="water-your-knowledge.html">&rarr; Water Your Knowledge > A manifesto for radical care or how to be a human in the arts </a> </sub>
 </div>
 </div>
 
 
 </div>
-
 
 <a href="index.html"><div class="nav-landing" style="background-color: #E4F9F1;"><h1>RE-TEND.TO YOUR GARDEN</h1></div></a>
 </body>
