--- a/zine-workshop.html
+++ b/zine-workshop.html
@@ -121,16 +121,19 @@
 </div>
 
 <br><br>
+<div class="footer-line"></div>
 
    <div class="contact">
 <sub>To explore more programs at the Blue Mountains Cultural Centre, please visit 
   <a href="https://bluemountainsculturalcentre.com.au/"><u>https://bluemountainsculturalcentre.com.au/</u></a>.</sub>
 </div>
 
+
+
 <div id="ecosystems">
     <h1>RELATED ECOSYSTEMS</h1>
     <div id="blob-container-blue"></div>
-    <div class="section-1">
+    <div class="section-2">
       <sub>
        <a href="tash-keuneman.html">&rarr; Tash Keuneman On Climate Action, Zine-Making 
         And What It Means To Design For Real Life</a> 
