--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
   </div>
 </div>
 
-  <a href="about.html"><div class="about-mobile"> <a href="about.html"><p>ABOUT THE GARDEN</p></a></div></a>
+  <a href="about.html"><div class="about-mobile"> <p>ABOUT THE GARDEN</p></div></a>
 </div>
+
 </div> <!--end of wrapper-->
 
  <div class="marquee-bottom">
